--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,12 @@ services:
     environment:
       PHP_OPCACHE_VALIDATE_TIMESTAMPS: "1"
     depends_on:
-      - db
+      - db-postgress
     restart: unless-stopped
 
-  db:
+  db-postgress:
     image: postgres:16-alpine
-    container_name: siimut-db
+    container_name: siimut-db-postgress
     env_file:
       - .env.docker
     environment:
