devops: add DB backend selection (pgsql/mysql) with split compose + interactive env\n\n- Split DB services into separate compose files: docker-compose.pgsql.yml and docker-compose.mysql.yml\n- Update base compose to depend on generic 'db' service\n- Enhance run.sh: choose DB via --db or DB_CHOICE/DB_DRIVER, write .env app accordingly, force composer setup in prod\n- Add interactive .env.docker creation (ask/copy/env/manual) and clarify passwords in .env.docker.example\n- Fix Postgres internal port to 5432; map host 5423->5432; add MySQL mapping 3307->3306\n- Update node service to node:alpine\n- Minor: ignore site/ and common artifacts

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,8 +1,23 @@
+DB_DRIVER=pgsql  # pgsql | mysql
+
+# PostgreSQL (aktif jika DB_DRIVER=pgsql)
+# Catatan: variabel ini dipakai untuk container database.
+# run.sh akan mengisi .env aplikasi (DB_*) dari nilai ini.
 POSTGRES_DB=siimut
 POSTGRES_USER=siimut
 POSTGRES_PASSWORD=siimut
 
-# These mirror values are used by Laravel inside the app container
+# MySQL (aktif jika DB_DRIVER=mysql)
+# Catatan: variabel ini dipakai untuk container database.
+# run.sh akan mengisi .env aplikasi (DB_*) dari nilai ini.
+MYSQL_DATABASE=siimut
+MYSQL_USER=siimut
+MYSQL_PASSWORD=siimut
+MYSQL_ROOT_PASSWORD=root
+
+# Mirror values used by Laravel inside the app container
+# Jika dikosongkan, run.sh akan mengambil dari blok POSTGRES_* / MYSQL_*
+# dan menuliskannya ke file .env aplikasi.
 DB_DATABASE=siimut
 DB_USERNAME=siimut
 DB_PASSWORD=siimut
@@ -12,3 +27,4 @@ DB_PASSWORD=siimut
 # LARAVEL_WAIT_FOR_DB=true
 # LARAVEL_RUN_MIGRATIONS=false
 # LARAVEL_STORAGE_LINK=true
+# AUTO_DOTENV=ask   # ask|copy|manual — kontrol pembuatan .env saat pertama kali
