--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   # ===== Web Server (Caddy) - Shared untuk semua project =====
   web:
     image: caddy:2-alpine
-    container_name: siimut-web
+    container_name: base-web
     ports:
       - "8080:8080"
       - "8081:8081"
