feat: migrate from PostgreSQL to MySQL, update environment configurations, and enhance database initialization scripts

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,26 +1,17 @@
-DB_DRIVER=pgsql  # pgsql | mysql
-
-# PostgreSQL (aktif jika DB_DRIVER=pgsql)
-# Catatan: variabel ini dipakai untuk container database.
-# run.sh akan mengisi .env aplikasi (DB_*) dari nilai ini.
-POSTGRES_DB=siimut
-POSTGRES_USER=siimut
-POSTGRES_PASSWORD=siimut
-
-# MySQL (aktif jika DB_DRIVER=mysql)
-# Catatan: variabel ini dipakai untuk container database.
-# run.sh akan mengisi .env aplikasi (DB_*) dari nilai ini.
-MYSQL_DATABASE=siimut
-MYSQL_USER=siimut
-MYSQL_PASSWORD=siimut
+# MySQL Configuration
+DB_DRIVER=mysql
 MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=laravel
+MYSQL_PASSWORD=laravel
 
-# Mirror values used by Laravel inside the app container
-# Jika dikosongkan, run.sh akan mengambil dari blok POSTGRES_* / MYSQL_*
-# dan menuliskannya ke file .env aplikasi.
-DB_DATABASE=siimut
-DB_USERNAME=siimut
-DB_PASSWORD=siimut
+# Database names per project
+DB_SIIMUT=siimut
+DB_IAM=laravel_iam
+DB_CLIENT=client_iiam
+
+# Common DB credentials (untuk compatibility)
+DB_USER=laravel
+DB_PASSWORD=laravel
 
 # Optional overrides
 # APP_ENV=production
