fix: add database configuration for application environments in .env.docker

--- a/.env.docker
+++ b/.env.docker
@@ -7,6 +7,24 @@ DB_DATABASE=siimut
 DB_USERNAME=siimut
 DB_PASSWORD=siimut
 
+# Database configuration for each application
+DB_SIIMUT=siimut_db
+DB_IAM=iam_db
+DB_CLIENT=client_db
+
+DB_SIIMUT_USER=siimut_user
+DB_IAM_USER=iam_user
+DB_CLIENT_USER=client_user
+
+DB_SIIMUT_PASSWORD=siimut_pass
+DB_IAM_PASSWORD=iam_pass
+DB_CLIENT_PASSWORD=client_pass
+
+# Default database credentials (for compatibility)
+DB_DATABASE=${DB_SIIMUT}
+DB_USERNAME=${DB_SIIMUT_USER}
+DB_PASSWORD=${DB_SIIMUT_PASSWORD}
+
 # Optional overrides
 # APP_ENV=production
 # LARAVEL_WAIT_FOR_DB=true
